create giveboard layout

--- a/test-giveboard.html
+++ b/test-giveboard.html
@@ -16,7 +16,7 @@
                     <a>Home</a>
                 </li>
                 <li>
-                    <a id="giveboardnav">Give Help Board</a>
+                    <a><u>Give Help Board</u></a>
                 </li>
                 <li>
                     <a id="getnav">Get Help Board</a>
@@ -33,6 +33,8 @@
         </nav>
     </header>
 <body>
-    
+    <div>
+        <h1>Give Help Board</h1>
+    </div>
 </body>
 </html>
